Refactor code structure for improved readability and maintainability along with initializing icon for the app

--- a/PomodoroApp.csproj
+++ b/PomodoroApp.csproj
@@ -6,6 +6,13 @@
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <ApplicationIcon>assets\clock.ico</ApplicationIcon>
   </PropertyGroup>
 
-</Project> 
+  <ItemGroup>
+    <None Update="assets\clock.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+</Project>
